@@ -39,7 +39,6 @@
 
 #include <QAction>
 #include <QModelIndex>
-#include <QDebug>
 
 #include "cantor/cantor_part.h"
 #include <cantor/panelpluginhandler.h>
